--- a/cryptography/ecc_2025/sage.ipynb
+++ b/cryptography/ecc_2025/sage.ipynb
@@ -1,9 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "58da5a5a-b9f3-468d-a49c-fce04b088011",
+   "metadata": {},
+   "source": [
+    "# 用sage操作椭圆曲线"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a03f15ac-f924-4c83-89d6-837c8ca37528",
+   "metadata": {},
+   "source": [
+    "https://www.johannes-bauer.com/compsci/ecc/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "deef532a-ff86-4c0f-bf0f-6b1871170a26",
+   "execution_count": null,
+   "id": "8161a138-b602-477a-a738-c5e0e4a5406a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Elliptic Curve defined by y^2 = x^3 + 2*x + 3 over Finite Field of size 263"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b4117f4-c5ce-4e45-8787-7927e1cc7051",
+   "metadata": {},
+   "source": [
+    "$$y^2 + a_1xy + a_3y = x^3 + a_2x^2 + a_4x + a_6$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b4a4383a-2ba8-46dc-bf98-4e1809140d6a",
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +53,26 @@
     "from sage.schemes.elliptic_curves.ell_finite_field import EllipticCurve_finite_field\n",
     "F = GF(263)\n",
     "C = EllipticCurve_finite_field(F, [0, 0, 0, 2, 3])  # [a1, a2, a3, a4, a6]\n",
-    "print(C)\n"
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a1e643b2-b495-4308-86fd-7a8f031c4e55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elliptic Curve defined by y^2 + 8*x*y + 5*y = x^3 + 2*x^2 + 2*x + 3 over Finite Field of size 263\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = EllipticCurve_finite_field(F, [8, 2, 5, 2, 3])  # [a1, a2, a3, a4, a6]\n",
+    "print(C)"
    ]
   },
   {
@@ -431,49 +484,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "3525b0e8-8b34-428f-9f0b-9fc9dd1dd022",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot(pts[4]) ## error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "daec3a6e-99e6-49b4-85e1-3a1d2edfb237",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'sage.rings.finite_rings.integer_mod.IntegerMod_int' object is not subscriptable",
+     "ename": "NameError",
+     "evalue": "name 'var' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/plot/plot.py:833\u001b[0m, in \u001b[0;36mxydata_from_point_list\u001b[0;34m(points)\u001b[0m\n\u001b[1;32m    832\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 833\u001b[0m     x, y \u001b[38;5;241m=\u001b[39m xy\n\u001b[1;32m    834\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable sage.rings.finite_rings.integer_mod.IntegerMod_int object",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/plot/point.py:391\u001b[0m, in \u001b[0;36mpoint\u001b[0;34m(points, **kwds)\u001b[0m\n\u001b[1;32m    390\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 391\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpoint2d\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    392\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mValueError\u001b[39;00m, \u001b[38;5;167;01mTypeError\u001b[39;00m):\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/misc/decorators.py:656\u001b[0m, in \u001b[0;36mrename_keyword.__call__.<locals>.wrapper\u001b[0;34m(*args, **kwds)\u001b[0m\n\u001b[1;32m    655\u001b[0m         \u001b[38;5;28;01mdel\u001b[39;00m kwds[old_name]\n\u001b[0;32m--> 656\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/misc/decorators.py:495\u001b[0m, in \u001b[0;36moptions.__call__.<locals>.wrapper\u001b[0;34m(*args, **kwds)\u001b[0m\n\u001b[1;32m    494\u001b[0m options\u001b[38;5;241m.\u001b[39mupdate(kwds)\n\u001b[0;32m--> 495\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/plot/point.py:613\u001b[0m, in \u001b[0;36mpoint2d\u001b[0;34m(points, **options)\u001b[0m\n\u001b[1;32m    611\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnot a 2D point\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 613\u001b[0m xdata, ydata \u001b[38;5;241m=\u001b[39m \u001b[43mxydata_from_point_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoints\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    614\u001b[0m g \u001b[38;5;241m=\u001b[39m Graphics()\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/plot/plot.py:835\u001b[0m, in \u001b[0;36mxydata_from_point_list\u001b[0;34m(points)\u001b[0m\n\u001b[1;32m    834\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m--> 835\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minvalid input for 2D point\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    836\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: invalid input for 2D point",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpts\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m## error\u001b[39;00m\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/misc/decorators.py:495\u001b[0m, in \u001b[0;36moptions.__call__.<locals>.wrapper\u001b[0;34m(*args, **kwds)\u001b[0m\n\u001b[1;32m    493\u001b[0m     options[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__original_opts\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds\n\u001b[1;32m    494\u001b[0m options\u001b[38;5;241m.\u001b[39mupdate(kwds)\n\u001b[0;32m--> 495\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/plot/plot.py:2033\u001b[0m, in \u001b[0;36mplot\u001b[0;34m(funcs, *args, **kwds)\u001b[0m\n\u001b[1;32m   2030\u001b[0m     funcs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(funcs)\n\u001b[1;32m   2032\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(funcs, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplot\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m-> 2033\u001b[0m     G \u001b[38;5;241m=\u001b[39m \u001b[43mfuncs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43moriginal_opts\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2035\u001b[0m     \u001b[38;5;66;03m# If we have extra keywords already set, then update them\u001b[39;00m\n\u001b[1;32m   2036\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m ext \u001b[38;5;129;01min\u001b[39;00m G\u001b[38;5;241m.\u001b[39m_extra_kwds:\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/schemes/elliptic_curves/ell_point.py:681\u001b[0m, in \u001b[0;36mEllipticCurvePoint_field.plot\u001b[0;34m(self, **args)\u001b[0m\n\u001b[1;32m    679\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m text(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124minfty$\u001b[39m\u001b[38;5;124m\"\u001b[39m, (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m3\u001b[39m), \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39margs)\n\u001b[1;32m    680\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 681\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpoint\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/plot/point.py:394\u001b[0m, in \u001b[0;36mpoint\u001b[0;34m(points, **kwds)\u001b[0m\n\u001b[1;32m    392\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mValueError\u001b[39;00m, \u001b[38;5;167;01mTypeError\u001b[39;00m):\n\u001b[1;32m    393\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msage\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplot\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplot3d\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mshapes2\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m point3d\n\u001b[0;32m--> 394\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpoint3d\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/misc/decorators.py:656\u001b[0m, in \u001b[0;36mrename_keyword.__call__.<locals>.wrapper\u001b[0;34m(*args, **kwds)\u001b[0m\n\u001b[1;32m    654\u001b[0m         kwds[new_name] \u001b[38;5;241m=\u001b[39m kwds[old_name]\n\u001b[1;32m    655\u001b[0m         \u001b[38;5;28;01mdel\u001b[39;00m kwds[old_name]\n\u001b[0;32m--> 656\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/plot/plot3d/shapes2.py:1507\u001b[0m, in \u001b[0;36mpoint3d\u001b[0;34m(v, size, **kwds)\u001b[0m\n\u001b[1;32m   1504\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   1505\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m-> 1507\u001b[0m A \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m([\u001b[43mPoint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mz\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m z \u001b[38;5;129;01min\u001b[39;00m v])\n\u001b[1;32m   1508\u001b[0m A\u001b[38;5;241m.\u001b[39m_set_extra_kwds(kwds)\n\u001b[1;32m   1509\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m A\n",
-      "File \u001b[0;32m/private/var/tmp/sage-10.5-current/venv/lib/python3.12/site-packages/sage/plot/plot3d/shapes2.py:907\u001b[0m, in \u001b[0;36mPoint.__init__\u001b[0;34m(self, center, size, **kwds)\u001b[0m\n\u001b[1;32m    894\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    895\u001b[0m \u001b[38;5;124;03mCreate the graphics primitive :class:`Point` in 3-D.\u001b[39;00m\n\u001b[1;32m    896\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    904\u001b[0m \u001b[38;5;124;03m    (1.0, 2.0, 3.0)\u001b[39;00m\n\u001b[1;32m    905\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    906\u001b[0m PrimitiveObject\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m--> 907\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloc \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mfloat\u001b[39m(\u001b[43mcenter\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m), \u001b[38;5;28mfloat\u001b[39m(center[\u001b[38;5;241m1\u001b[39m]), \u001b[38;5;28mfloat\u001b[39m(center[\u001b[38;5;241m2\u001b[39m]))\n\u001b[1;32m    908\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize \u001b[38;5;241m=\u001b[39m size\n\u001b[1;32m    909\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_extra_kwds(kwds)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'sage.rings.finite_rings.integer_mod.IntegerMod_int' object is not subscriptable"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msage\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplot\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcontour_plot\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m contour_plot\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# 定义变量\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[43mvar\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx y\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'var' is not defined"
      ]
     }
    ],
    "source": [
-    "plot(pts[4]) ## error"
+    "# 导入绘图模块\n",
+    "from sage.plot.plot import Graphics\n",
+    "from sage.plot.contour_plot import contour_plot\n",
+    "\n",
+    "\n",
+    "# 定义变量\n",
+    "var('x y')\n",
+    "\n",
+    " \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daec3a6e-99e6-49b4-85e1-3a1d2edfb237",
+   "id": "fb8dabd2-5838-4532-b1e7-8e0b36facb5b",
    "metadata": {},
    "outputs": [],
    "source": []
