--- a/cryptography/ecc_2025/openssl_ecc.ipynb
+++ b/cryptography/ecc_2025/openssl_ecc.ipynb
@@ -1546,9 +1546,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ecc]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ecc-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1560,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
